modif chemin images

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <div class="projects-grid">
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="C:\Users\ACER\Desktop\a7fdfedd-749f-4722-8450-8b24bae8ba8c.jpg" alt="Projet 1 : identité visuelle (image à remplacer)">
+                            <img src="images/gamesweek.jpg" alt="Projet 1 : Affiche Corsica Games Week 4">
                             <div class="project-overlay">
                                 <h3 class="project-title">IDENTITÉ VISUELLE</h3>
                                 <p class="project-description">Affiche et visuels pour la Corsica Games Week 4.</p>
@@ -238,7 +238,7 @@
 
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="C:\Users\ACER\Desktop\download.jpg" alt="Projet 2 : affiche (image à remplacer)">
+                            <img src="images/download.jpg" alt="Projet 2 : Logo Label de musique">
                             <div class="project-overlay">
                                 <h3 class="project-title"><Label>Label de musique</Label></h3>
                                 <p class="project-description">Logo d'un de mes projets : créer un label de musique..</p>
@@ -251,7 +251,7 @@
 
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="C:\Users\ACER\Desktop\Capture d'écran 2026-01-16 153310.png" alt="Projet 3 : réseaux sociaux ">
+                            <img src="images/parfum.png" alt="Projet 3 : Visuels ">
                             <div class="project-overlay">
                                 <h3 class="project-title">Affiche Parfum</h3>
                                 <p class="project-description">Voici a présent l'affiche d'un parfum fictif réalisé par mes soins.</p>
